syntax = "proto3";

package stack_attack;

message StackAttackLobbySettings {}

message StackAttackInGameCommand {
    oneof command {
        MoveCommand move = 1;
        JumpCommand jump = 2;
    }
}

message MoveCommand {
    HorizontalDirection direction = 1;
}

message JumpCommand {}

enum HorizontalDirection {
    HORIZONTAL_DIRECTION_UNSPECIFIED = 0;
    HORIZONTAL_DIRECTION_LEFT = 1;
    HORIZONTAL_DIRECTION_RIGHT = 2;
}

message StackAttackGameState {
    uint64 tick = 1;
    uint32 field_width = 2;
    uint32 field_height = 3;
    uint32 tick_interval_ms = 4;

    repeated Worker workers = 5;
    repeated Box boxes = 6;
    repeated Crane cranes = 7;

    uint32 score = 8;
    uint32 lines_cleared = 9;
    uint32 current_difficulty_level = 10;

    GameStatus status = 11;
    repeated GameEvent events = 12;
}

message Worker {
    string player_id = 1;
    bool is_bot = 2;
    int32 x = 3;
    int32 y = 4;
    WorkerState state = 5;
    uint32 color_index = 6;
    bool alive = 7;
}

enum WorkerState {
    WORKER_STATE_UNSPECIFIED = 0;
    WORKER_STATE_GROUNDED = 1;
    WORKER_STATE_JUMPING = 2;
    WORKER_STATE_FALLING = 3;
}

message Box {
    uint32 id = 1;
    int32 x = 2;
    int32 y = 3;
    uint32 pattern_id = 4;
    bool falling = 5;
}

message Crane {
    uint32 id = 1;
    int32 x = 2;
    int32 target_x = 3;
    CraneState state = 4;
    uint32 box_pattern_id = 5;
}

enum CraneState {
    CRANE_STATE_UNSPECIFIED = 0;
    CRANE_STATE_MOVING = 1;
    CRANE_STATE_DROPPING = 2;
    CRANE_STATE_LEAVING = 3;
}

enum GameStatus {
    GAME_STATUS_UNSPECIFIED = 0;
    GAME_STATUS_IN_PROGRESS = 1;
    GAME_STATUS_GAME_OVER = 2;
}

message GameEvent {
    oneof event {
        WorkerJumpedEvent worker_jumped = 1;
        WorkerLandedEvent worker_landed = 2;
        BoxPushedEvent box_pushed = 3;
        BoxLandedEvent box_landed = 4;
        LineClearedEvent line_cleared = 5;
        CraneSpawnedEvent crane_spawned = 6;
        BoxDroppedEvent box_dropped = 7;
        WorkerCrushedEvent worker_crushed = 8;
    }
}

message WorkerJumpedEvent {
    string player_id = 1;
}

message WorkerLandedEvent {
    string player_id = 1;
    int32 x = 2;
    int32 y = 3;
}

message BoxPushedEvent {
    uint32 box_id = 1;
    int32 from_x = 2;
    int32 to_x = 3;
    string pushed_by = 4;
}

message BoxLandedEvent {
    uint32 box_id = 1;
    int32 x = 2;
    int32 y = 3;
}

message LineClearedEvent {
    int32 y = 1;
    uint32 points_earned = 2;
}

message CraneSpawnedEvent {
    uint32 crane_id = 1;
    int32 start_x = 2;
    int32 target_x = 3;
}

message BoxDroppedEvent {
    uint32 crane_id = 1;
    uint32 box_id = 2;
    int32 x = 3;
}

message WorkerCrushedEvent {
    string player_id = 1;
    uint32 box_id = 2;
}

message StackAttackGameEndInfo {
    StackAttackGameEndReason reason = 1;
    uint32 total_score = 2;
    uint32 lines_cleared = 3;
    uint32 boxes_pushed = 4;
    uint32 survival_time_seconds = 5;
}

enum StackAttackGameEndReason {
    STACK_ATTACK_GAME_END_REASON_UNSPECIFIED = 0;
    STACK_ATTACK_GAME_END_REASON_WORKER_CRUSHED = 1;
    STACK_ATTACK_GAME_END_REASON_BOXES_REACHED_CEILING = 2;
    STACK_ATTACK_GAME_END_REASON_PLAYER_DISCONNECTED = 3;
}
